--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,15 @@
     "@drizzle/store": "^1.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-router-dom": "5.1.2",
+    "node-sass": "4.13.0",
+    "bulma": "0.7.5",
+    "query-string": "6.9.0",
+    "fake-auth": "0.0.8",
+    "analytics": "0.3.0",
+    "@analytics/google-analytics": "0.2.2",
+    "mailchimp-api-v3": "1.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
