--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/truffle-box/drizzle-box#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
-    "@openzeppelin/test-helpers": "^0.5.4"
+    "@openzeppelin/test-helpers": "^0.5.4",
+    "truffle-assertions": "^0.9.2"
   }
 }
