--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,12 +8,16 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
+}
+
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
 group 'money.whitt'
 version '0.0.1'
-mainClassName = "io.ktor.server.netty.EngineMain"
+mainClassName = "money.whitt.ApplicationKt"
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
