--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,10 @@
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
     "analytics": "0.3.0",
+    "big-integer": "^1.6.48",
     "bulma": "0.7.5",
     "fake-auth": "0.0.8",
+    "humanize-duration": "^3.22.0",
     "mailchimp-api-v3": "1.13.1",
     "node-sass": "4.13.0",
     "query-string": "6.9.0",
