--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,11 @@
     "@drizzle/react-components": "^1.5.1",
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
+    "@truffle/contract": "^4.1.11",
     "analytics": "0.3.0",
     "big-integer": "^1.6.48",
     "bulma": "0.7.5",
+    "bulma-slider": "^2.0.0",
     "fake-auth": "0.0.8",
     "humanize-duration": "^3.22.0",
     "mailchimp-api-v3": "1.13.1",
