--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "bulma-slider": "^2.0.0",
     "fake-auth": "0.0.8",
     "humanize-duration": "^3.22.0",
+    "lodash": "^4.17.15",
     "mailchimp-api-v3": "1.13.1",
     "node-sass": "4.13.0",
     "query-string": "6.9.0",
