--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Solidity contracts for Whitt Money protocol",
   "files": [
     "/contracts/*.sol",
-    "/build/contracts/*.json",
-    "/other/*.js"
+    "/build/contracts/*.json"
   ],
   "repository": {
     "type": "git",
@@ -30,6 +29,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
     "@openzeppelin/test-helpers": "^0.5.4",
+    "@truffle/hdwallet-provider": "^1.0.32",
     "truffle-assertions": "^0.9.2"
   }
 }
